gccida/g1/form_sum
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/form_sum/src/reload.c:5532:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v16 = (  struct rtx_def *)x[1]; 
                          ^~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/form_sum/src/reload.c:5541:32: error: use of undeclared identifier 'machine_mode'
return gen_rtx_fmt_ee( PLUS, ( machine_mode)v3, y, x); 
                               ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/form_sum/src/reload.c:5563:32: error: use of undeclared identifier 'machine_mode'
return gen_rtx_fmt_ee( PLUS, ( machine_mode)v3, y, x); 
                               ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/form_sum/src/reload.c:5567:32: error: use of undeclared identifier 'machine_mode'
return gen_rtx_fmt_ee( PLUS, ( machine_mode)v3, y, x); 
                               ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/form_sum/src/reload.c:5572:31: error: use of undeclared identifier 'machine_mode'
v10 = gen_rtx_fmt_ee( PLUS, ( machine_mode)v3, y, x); 
                              ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/form_sum/src/obj/reload.o] Error 1
